openshift/web-image-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-image-backend
  labels:
    app: web-image-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-image-backend
  template:
    metadata:
      labels:
        app: web-image-backend
    spec:
      containers:
        - name: web-image-backend
          image: ghcr.io/dani05/web-image-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uploads-storage
              mountPath: /uploads
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
